# factorito

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  fly.toml
src/: actions.rs  input.rs  main.rs  sprites.rs  ui.rs  updates.rs
web/: index.html
